[tool.poetry]
name = "Yeet"
version = "0.1.0"
description = "A discord bot with fun and useful features like Pixel art, Interactive calculator, Pokétwo spawn-chance and moveset commands, Definition command and more!"
authors = ["Witherr <witherredaway@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"
replit = "^3.2.0"
jishaku = {git = "https://github.com/Gorialis/jishaku"}
durations-nlp = "^1.0.1"
wikipedia = "^1.4.0"
"discord.py" = {git = "https://github.com/Rapptz/discord.py"}
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
typing-extensions = "^3.7.4.3"
simpleeval = "^0.9.11"
emojis = "^0.6.0"
pandas = "^1.4.0"
parsedatetime = "^2.6"
lxml = "^4.8.0"
humanize = "^4.0.0"
"mystbin.py" = "^2.2.0"
python-benedict = "^0.25.0"
yarl = "^1.7.2"
aiohttp = "^3.8.1"
validators = "^0.18.2"
numpy = "^1.22.3"
requests = "^2.27.1"
"gists.py" = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"