[tool.poetry]
name = "yeet"
version = "0.1.0"
description = "A discord bot with fun and useful features like Pixel art, Interactive calculator, Pokétwo spawn-chance and moveset commands, Definition command and more!"
authors = ["Witherr <witherredaway@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.8.3"
aiosignal = "1.3.1"
astunparse = "1.6.3"
async-timeout = "4.0.3"
attrs = "23.2.0"
black = "23.1.0"
braceexpand = "0.1.7"
cachetools = "5.3.2"
certifi = "2024.2.2"
charset-normalizer = "2.1.1"
click = "8.1.7"
discord-py = "2.3.0"
emoji = "2.1.0"
flask = "2.2.2"
frozenlist = "1.4.1"
google-auth = "2.28.0"
google-auth-oauthlib = "1.2.0"
gspread = "5.7.2"
gspread-asyncio = "1.8.1"
humanize = "4.4.0"
idna = "3.6"
import-expression = "1.1.4"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
jishaku = "2.5.1"
line-profiler = "4.1.2"
lxml = "4.9.1"
markupsafe = "2.1.5"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
numpy = "1.23.5"
oauthlib = "3.2.2"
packaging = "23.2"
pandas = "1.5.0"
parsedatetime = "2.6"
pathspec = "0.12.1"
pillow = "9.2.0"
platformdirs = "4.2.0"
protobuf = "4.23.1"
pyasn1 = "0.5.1"
pyasn1-modules = "0.3.0"
pymongo = "3.13.0"
python-dateutil = "2.8.2"
pytz = "2024.1"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
rsa = "4.9"
simpleeval = "0.9.12"
six = "1.16.0"
urllib3 = "2.2.1"
werkzeug = "2.2.2"
yarl = "1.9.4"
gists-py = {git = "https://github.com/WitherredAway/gists.py", rev = "a15548d32f8ff05fe469c9205b364cef46df06ac"}
aiowiki = {git = "https://github.com/Gelbpunkt/aiowiki", rev = "34f24bdcaedfd5da96cb6125714505945211287c"}
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus", rev = "fbb8803779373357e274e1540b368365fd9d8074"}
pilmoji = {git = "https://github.com/jay3332/pilmoji/", rev = "ec48ff47bbf7a8ae5ceec7f5fef483402c9e7a0e"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
